LINK_LIBRARIES(drogon trantor pthread dl)

ADD_EXECUTABLE(sqlite3_test1 test1.cc Groups.cc)

SET_PROPERTY(TARGET sqlite3_test1 PROPERTY CXX_STANDARD ${DROGON_CXX_STANDARD})
SET_PROPERTY(TARGET sqlite3_test1 PROPERTY CXX_STANDARD_REQUIRED ON)
SET_PROPERTY(TARGET sqlite3_test1 PROPERTY CXX_EXTENSIONS OFF)